--- a/src/lang/galician.txt
+++ b/src/lang/galician.txt
@@ -910,7 +910,7 @@ STR_NEWS_STATION_NOW_ACCEPTS_CARGO_AND_CARGO                    :{WHITE}{STATION
 
 STR_NEWS_OFFER_OF_SUBSIDY_EXPIRED                               :{BIG_FONT}{BLACK}Oferta de subvención expirada:{}{}{STRING} dende {STRING} ata {STRING} non será subvencionada.
 STR_NEWS_SUBSIDY_WITHDRAWN_SERVICE                              :{BIG_FONT}{BLACK}Subvención reitrada:{}{}O servizo de transporte de {STRING} dende {STRING} ata {STRING} xa non ten subvención.
-STR_NEWS_SERVICE_SUBSIDY_OFFERED                                :{BIG_FONT}{BLACK}Oferta de subvención:{}{}O primeiro servizo de transporte de {STRING} dende {STRING} ata {STRING} será subvencionado con {NUM} durante un ano pola autoridade local!
+STR_NEWS_SERVICE_SUBSIDY_OFFERED                                :{BIG_FONT}{BLACK}Oferta de subvención:{}{}O primeiro servizo de transporte de {STRING} dende {STRING} ata {STRING} será subvencionado durante {NUM} ano{P "" s} pola autoridade local!
 ###length 4
 STR_NEWS_SERVICE_SUBSIDY_AWARDED_HALF                           :{BIG_FONT}{BLACK}Subvención concedida a {STRING}!{}{}Polo servizo de transporte de {STRING} dende {STRING} ata {STRING} pagarase un 50% máis durante {NUM} ano{P "" s}!
 STR_NEWS_SERVICE_SUBSIDY_AWARDED_DOUBLE                         :{BIG_FONT}{BLACK}Subvención concedida a {STRING}!{}{}Polo servizo de transporte de {STRING} dende {STRING} ata {STRING} pagarase o dobre durante {NUM} ano{P "" s}!
@@ -5544,6 +5544,7 @@ STR_JUST_DATE_SHORT                                             :{DATE_SHORT}
 STR_JUST_DATE_LONG                                              :{DATE_LONG}
 STR_JUST_DATE_ISO                                               :{DATE_ISO}
 STR_JUST_STRING                                                 :{STRING}
+STR_JUST_STRING2                                                :{STRING}
 STR_JUST_STRING_STRING                                          :{STRING}{STRING}
 
 # Slightly 'raw' stringcodes with colour or size
@@ -5592,7 +5593,7 @@ STR_TOOLBAR_RAILTYPE_VELOCITY                                   :{STRING} ({VELO
 ##### JGR's PATCH STRINGS
 #########################
 # Obtained with: ../../build/src/strgen/strgen -w galician.txt 2>&1 >/dev/null | cut -d"'" -f 2 > galician_missing.txt
-# Obtained translations strings with: ../../build/src/strgen/strgen -w galician.txt 2>&1 >/dev/null | cut -d"'" -f 2 | xargs -I U grep U  english.txt  >> galician_missing_trans.txt
+# Obtained translations strings with: ../../build/src/strgen/strgen -w galician.txt 2>&1 >/dev/null | cut -d"'" -f 2 | xargs -I U grep -w "U"  english.txt  >> galician_missing_trans.txt
 #########################
 
 STR_UNIT_NAME_VELOCITY_GAMEUNITS                                :cadros/día
@@ -6816,7 +6817,6 @@ STR_VIEWPORT_TOWN_TINY_MEDIOCRE_RATING                          :{TINY_FONT}{ORA
 STR_VIEWPORT_TOWN_TINY_GOOD_RATING                              :{TINY_FONT}{YELLOW}{TOWN}
 STR_VIEWPORT_TOWN_TINY_EXCELLENT_RATING                         :{TINY_FONT}{GREEN}{TOWN}
 STR_JUST_STRING1                                                :{STRING}
-STR_JUST_STRING2                                                :{STRING}
 STR_JUST_RAW_STRING                                             :{STRING}
 STR_JUST_BIG_RAW_STRING                                         :{BIG_FONT}{STRING}
 STR_JUST_DECIMAL                                                :{DECIMAL}
@@ -7085,3 +7085,98 @@ STR_SCHDISPATCH_QUERY_CLEAR_SCHEDULE_CAPTION                    :{WHITE}Limpar s
 STR_SCHDISPATCH_QUERY_CLEAR_SCHEDULE_TEXT                       :{WHITE}Seguro que queres limpar {NUM} slot{P "" s} de saída deste programa?
 STR_SCHDISPATCH_QUERY_REMOVE_SCHEDULE_CAPTION                   :{WHITE}Eliminar programa
 STR_SCHDISPATCH_QUERY_REMOVE_SCHEDULE_TEXT                      :{WHITE}Seguro que queres eliminar este programa (contendo {NUM} slot{P "" s} de saída)?
+
+######################### Update 2022-09-14
+# Remember to first update the project and rebuild it all to have the latest instance of strgen.
+# Obtained translations strings with: ../../build/src/strgen/strgen -w galician.txt 2>&1 | cut -d\' -f 2 | head -n-1 | xargs -I $ grep -w $ english.txt >> galician.txt
+#########################
+STR_HIERARCHY_SEPARATOR                                         :{SP}/{SP}
+STR_GRAPH_CARGO_PAYMENT_RATES_TITLE_AVG_SPEED                   :{TINY_FONT}{BLACK}Pago pola entrega de 1 unidade (ou 1.000 litros) de carga nunha distancia de 200 cadros
+STR_GAME_OPTIONS_VIDEO_DRIVER_INFO                              :{BLACK}Controlador actual: {STRING}
+STR_CONFIG_SETTING_TRAIN_BRAKING_ASPECT_LIMITED_ON              :Habilitado {PUSH_COLOUR}{RED}(Experto, dificil){POP_COLOUR}
+STR_CONFIG_SETTING_REALISTIC_BRAKING_ASPECT_LIMITED             :Limitación da reserva no freado realista dos trens: {STRING}
+STR_CONFIG_SETTING_REALISTIC_BRAKING_ASPECT_LIMITED_HELPTEXT    :No modelo de freado realista, limita a anticipación dos trens o aspecto das sinais (é dicir, non permitir reservar un número ilimitado de sinais).{} Isto require dun NewGRF que permite sinais multi-aspecto.{}{}Esta é unha configuración experta que probablemente aumentará a dificultade de xogo e require darlle outra volta a hora de poñer os sinais (tipo e lugar).
+STR_CONFIG_SETTING_SHOW_WAGON_INTRO_YEAR                        :Amosar o ano de introdución do vagón na fiestra de construción do vehículo: {STRING}
+STR_CONFIG_SETTING_SHOW_WAGON_INTRO_YEAR_HELPTEXT               :Engade unha liña na fiestra de construción do vehículo, amosando o ano de introdución dos vagóns.
+STR_CONFIG_SETTING_DISABLE_WATER_ANIMATION                      :Deshabilitar animacións da auga: {STRING}
+STR_CONFIG_SETTING_DISABLE_WATER_ANIMATION_HELPTEXT             :Cando se habilita, desactiva as animacións da auga cando o nivel de zoom está no punto establecido ou superior ó especificado.{}Isto pode ser util para evitar artefactos visuais coa auga animada nalgúns sets gráficos cando se fai moito zoom.
+STR_CONFIG_SETTING_DISABLE_WATER_ANIMATION_8X                   :8x zoom e superior
+STR_CONFIG_SETTING_DISABLE_WATER_ANIMATION_16X                  :16x zoom e superior
+STR_CONFIG_SETTING_DISABLE_WATER_ANIMATION_32X                  :32x zoom e superior
+STR_CONFIG_SETTING_SHOW_ORDER_OCCUPANCY_BY_DEFAULT              :Amosar a orde de ocupación por defecto: {STRING}
+STR_CONFIG_SETTING_SHOW_ORDER_OCCUPANCY_BY_DEFAULT_HELPTEXT     :Amosar a ocupación detallada por defecto cando se abre a fiestra de ordes do vehículo.
+STR_CONFIG_SETTING_SHOW_GROUP_HIERARCHY_NAME                    :Amosar a xerarquía de grupo no nome: {STRING}
+STR_CONFIG_SETTING_SHOW_GROUP_HIERARCHY_NAME_HELPTEXT           :Cando se habilita, os nomes dos grupos incluen a xerarquía completa de grupos superiores.
+STR_CONFIG_SETTING_SHOW_VEHICLE_GROUP_HIERARCHY_NAME            :Amosar a xerarquía de grupo no nome dos vehículos: {STRING}
+STR_CONFIG_SETTING_SHOW_VEHICLE_GROUP_HIERARCHY_NAME_HELPTEXT   :Cando se habilita, e amosar a xerarquía do grupo no nome está activo, os nomes de vehículos que teñen un nome de grupo inclúen toda a xerarquía superior
+STR_CONFIG_SETTING_TREES_AROUND_SNOWLINE_DYNAMIC_RANGE          :Anchura da liña de neve para árbores árticas: {STRING}
+STR_CONFIG_SETTING_TREES_AROUND_SNOWLINE_DYNAMIC_RANGE_HELPTEXT :Cando se utiliza unha liña de neve variable por temporada, que porcentaxe da variación de liña de neve utilízase para colocar árbores árticas. 0% utiliza a liña de neve máis baixa (inverno), 100% utiliza todo o rango entre verán e inverno.
+STR_CONFIG_SETTING_NO_EXPIRE_OBJECTS_AFTER                      :Non expirar obxectos despois de: {STRING}
+STR_CONFIG_SETTING_NO_EXPIRE_OBJECTS_AFTER_HELPTEXT             :Obxectos que doutro xeito expirarían despois deste ano permanecen dispoñibles para sempre
+STR_CONFIG_SETTING_NO_EXPIRE_OBJECTS_AFTER_VALUE                :{NUM}
+STR_CONFIG_SETTING_NO_EXPIRE_OBJECTS_AFTER_ZERO                 :Deshabilitado
+STR_CONFIG_SETTING_IGNORE_OBJECT_INTRO_DATES                    :Ignorar a data de introdución dos obxectos: {STRING}
+STR_CONFIG_SETTING_IGNORE_OBJECT_INTRO_DATES_HELPTEXT           :Establece se os xogadores poden construír obxectos antes da súa data de introdución.{}Non aplica ao bxectos construídos durante a xeración do mapa.
+STR_BUILD_SIGNAL_DEFAULT_STYLE                                  :Por defecto
+STR_BUILD_SIGNAL_STYLE_TOOLTIP                                  :{BLACK}Escolle o estilo de sinal
+STR_TRACE_RESTRICT_VARIABLE_PBS_RES_END_TILE                    :cadro de fin da reserva PBS
+STR_TRACE_RESTRICT_VARIABLE_PBS_RES_END_TILE_LONG               :cadro o final da reserva de PBS dende este sinal
+STR_TRACE_RESTRICT_VARIABLE_ORDER_TARGET_DIRECTION              :dirección do obxectivo da orde
+STR_TRACE_RESTRICT_CONDITIONAL_TARGET_DIRECTION                 :{STRING} cadro de {STRING} {STRING} máis lonxe que {STRING} ca este sinal entón
+STR_TRACE_RESTRICT_SIGNAL_MODE_CONTROL                          :Control do modo de sinal
+STR_TRACE_RESTRICT_USE_NORMAL_ASPECT_MODE                       :Utiliza o aspecto de sinal normal (aspecto de sinal combinado normal/desvío)
+STR_TRACE_RESTRICT_USE_SHUNT_ASPECT_MODE                        :Utiliza o aspecto de sinal de desvío  (aspecto de sinal combinado normal/desvío)
+STR_TRACE_RESTRICT_USE_NORMAL_ASPECT_MODE_SHORT                 :Utilzia o aspecto de sinal normal
+STR_TRACE_RESTRICT_USE_SHUNT_ASPECT_MODE_SHORT                  :Utiliza o aspecto de sinal de desvío
+STR_TRACE_RESTRICT_DISPATCH_SLOT_NEXT                           :seguinte slot de saída
+STR_TRACE_RESTRICT_DISPATCH_SLOT_LAST                           :último slot de saída
+STR_TRACE_RESTRICT_DISPATCH_SLOT_SHORT_NEXT                     :seguinte
+STR_TRACE_RESTRICT_DISPATCH_SLOT_SHORT_LAST                     :último
+STR_TRACE_RESTRICT_SELECT_TILE                                  :{BLACK}Selecciona cadro
+STR_TRACE_RESTRICT_HIGHLIGHT_TOOLTIP                            :{BLACK}Alterna destacar todos os sinais compartindo este programa
+STR_TRACE_RESTRICT_WARNING_SIGNAL_MODE_CONTROL_ONLY             :{STRING} {PUSH_COLOUR}{RED}(só para as accions de control de modo de sinais){POP_COLOUR}
+STR_TRACE_RESTRICT_WARNING_NO_SIGNAL_MODE_CONTROL               :{STRING} {PUSH_COLOUR}{RED}(non para as accións de control de modo de sinais){POP_COLOUR}
+STR_WATERWAYS_TOOLBAR_CREATE_RIVER_IN_GAME_TOOLTIP              :{BLACK}Colocar ríos
+STR_INDUSTRY_CARGOES_NOTIFY_SMALLMAP_ALL                        :Todas as industrias
+STR_LAI_RAIL_DESCRIPTION_TRACK_WITH_NOENTRY2SIGNALS             :Vía de ferrocarrís con sinais de non-entrada
+STR_LAI_RAIL_DESCRIPTION_TRACK_WITH_NORMAL_NOENTRY2SIGNALS      :Vía de ferrocarrís con sinais de non-entrada e bloque
+STR_LAI_RAIL_DESCRIPTION_TRACK_WITH_PRE_NOENTRY2SIGNALS         :Vía de ferrocarrís con sinais de non-entrada e pre-
+STR_LAI_RAIL_DESCRIPTION_TRACK_WITH_EXIT_NOENTRY2SIGNALS        :Vía de ferrocarrís con sinais de non entrada e saída-
+STR_LAI_RAIL_DESCRIPTION_TRACK_WITH_COMBO_NOENTRY2SIGNALS       :Vía de ferrocarrís con sinais de non-entrada e combo-
+STR_LAI_RAIL_DESCRIPTION_TRACK_WITH_PBS_NOENTRY2SIGNALS         :Vía de ferrocarrís con sinais de non-entrada e ruta
+STR_LAI_RAIL_DESCRIPTION_TRACK_WITH_NOENTRY_NOENTRY2SIGNALS     :Vía de ferrocarrís con sinais de non-entrada e ruta dun só sentido
+STR_LAI_RAIL_DESCRIPTION_TRACK_WITH_PROG_NOENTRY2SIGNALS        :Vía de ferrocarrís con sinais de non-entrada e pre- programábeis
+STR_LAI_RAIL_DESCRIPTION_TRACK_SIGNAL_STYLE                     :{STRING}: ({STRING})
+STR_LAI_RAIL_DESCRIPTION_TRACK_SIGNAL_STYLE2                    :{STRING}: ({STRING} e {STRING})
+STR_NEWGRF_INSPECT_DUPLICATE                                    :{BLACK}D
+STR_NEWGRF_INSPECT_DUPLICATE_TOOLTIP                            :{BLACK}Duplicar esta fiestra
+STR_NEWGRF_INSPECT_SPRITE_DUMP_UNOPT                            :{BLACK}U
+STR_NEWGRF_INSPECT_SPRITE_DUMP_UNOPT_TOOLTIP                    :{BLACK}Amosar grupos de sprites sen ter ningunha aplicación optimizada.{}{}Require recargar NewGRFs se non estaba previamente habilitado (misc_debug 10).
+STR_NEWGRF_INSPECT_SPRITE_DUMP_GOTO                             :{BLACK}G
+STR_NEWGRF_INSPECT_SPRITE_DUMP_GOTO_TOOLTIP                     :{BLACK}Desprazarse o sprite número
+STR_NEWGRF_INSPECT_SPRITE_DUMP_PANEL_TOOLTIP                    :{BLACK}Click para destacar o grupo de sprites{}Shift+Click para compactar o grupo de sprites{}Ctrl+Click para destacar o rexistro de almacenamento temporal
+STR_NEWGRF_INSPECT_CAPTION_OBJECT_AT_SIGNALS                    :Sinais
+STR_ORDER_CONDITIONAL_DISPATCH_SLOT                             :Slot de despacho
+STR_ORDER_CONDITIONAL_SCHED_SELECT_TOOLTIP                      :{BLACK}O programa de despachos a usar
+STR_ORDER_CONDITIONAL_SCHED_TEST_TOOLTIP                        :{BLACK}A condición do programa de despachos a probar
+STR_ORDER_CONDITIONAL_COMPARATOR_DISPATCH_SLOT_IS_FIRST         :é o primeiro slot
+STR_ORDER_CONDITIONAL_COMPARATOR_DISPATCH_SLOT_IS_NOT_FIRST     :non é o primeiro slot
+STR_ORDER_CONDITIONAL_COMPARATOR_DISPATCH_SLOT_IS_LAST          :é o último slot
+STR_ORDER_CONDITIONAL_COMPARATOR_DISPATCH_SLOT_IS_NOT_LAST      :non é o último slot
+STR_ORDER_CONDITIONAL_DISPATCH_SLOT_DISPLAY                     :Saltar a orde {COMMA} cando {STRING} {STRING} {STRING}
+STR_WARNING_LOADGAME_REMOVED_UNCORRECTABLE_VEHICLES             :{WHITE}Eliminados {NUM} vehículos que se atoparon inválidos durante a carga
+STR_ERROR_UNSUITABLE_SIGNAL_TYPE                                :{WHITE}... tipo de sinal non axeitado
+STR_ERROR_NO_RAIL_STATION                                       :{WHITE}Non hai estación de ferrocarril...
+STR_ERROR_NO_BUS_STATION                                        :{WHITE}Non hai estación de bus...
+STR_ERROR_NO_TRUCK_STATION                                      :{WHITE}Non hai estación de camións...
+STR_ERROR_NO_DOCK                                               :{WHITE}Non hai porto...
+STR_ERROR_NO_AIRPORT                                            :{WHITE}Non hai aeroporto/heliporto...
+STR_ERROR_NO_STOP_COMPATIBLE_ROAD_TYPE                          :{WHITE}Non hai paradas con un tipo de estrada/tranvía compatible...
+STR_ERROR_NO_STOP_ARTIC_VEH                                     :{WHITE}Non hai paradas axeitadas para vehículos articulados de estrada.{}Os vehículos de estrada articulados requiren unha parada de vía, non unha estación terminal/baía.
+STR_ERROR_AIRPORT_NO_PLANES                                     :{WHITE}Este avión non pode aterrar neste heliporto...
+STR_ERROR_AIRPORT_NO_HELIS                                      :{WHITE}Este helicóptero non pode aterrar neste aeroporto...
+STR_ERROR_NO_RAIL_WAYPOINT                                      :{WHITE}Non hai punto de ruta de ferrocarril...
+STR_ERROR_NO_ROAD_WAYPOINT                                      :{WHITE}Non hai punto de ruta de estrada...
+STR_ERROR_NO_BUOY                                               :{WHITE}Non hai boia...
+STR_BLACK_STRING1                                               :{BLACK}{STRING}
+STR_TMPL_WARNING_VEH_NO_COMPATIBLE_RAIL_TYPE                    :{RED}Tren non construíble: A cadea non é compatible con ningún tipo de ferrocarril
